# pimpl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: pimplConfig.cmake.in
include/: CMakeLists.txt  impl_ptr.h
include/detail/: align_storage.h  call_traits.h  compress_pair.h  copied.h  detail.h  has_member.h  inplace.h  is_allocator.h  shared.h  to_address.h  type_with_alignment.h  unique.h
tests/: CMakeLists.txt
tests/all_in_one/: CMakeLists.txt  allocator.hpp  impl.cpp  impl_always_inplace.cpp  impl_copied.cpp  impl_inplace.cpp  impl_poly.cpp  impl_shared.cpp  impl_unique.cpp  main.cpp  test.hpp
